--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -163,3 +163,50 @@ div.bible_text{
   color: #f39c12; /* Gold hover */
   text-decoration: underline;
 }
+
+/* Images */
+/* Add a cursor to indicate clickability */
+td[clickable] {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Apply a hover effect */
+td[clickable] img.menu_picture:hover {
+  transform: scale(1.05); /* Slightly enlarge the image */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Add a shadow */
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
+}
+
+/* Add a ripple effect when clicked */
+td[clickable]::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: width 0.3s ease, height 0.3s ease, opacity 0.3s ease;
+  opacity: 0;
+}
+
+td[clickable]:active::after {
+  width: 150px;
+  height: 150px;
+  opacity: 1;
+  transition: 0s;
+}
+/* JNotes */
+.notes{
+  width:100%;
+  height: 100px;
+  margin-bottom: 16px;
+  padding: 8px;
+  font-size: 14px;
+}
+
+
